--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "מבשלים עם הטמפרטורות הנכונות (2/4)",
     "hob_induction2_tips": "מצא את כל הטמפרטורות שאתה צריך כדי להכין את המנה המושלמת",
     "hob_induction3": "התחבר וגלה את כל המתכונים (3/4)",
-    "hob_induction3_tips": "למד כיצד לחבר את כלי הבישול החכמים שלך ולעיין במגוון רחב של מתכונים שלב אחר שלב, המיוצרים במיוחד עבור טמפרטורה",
+    "hob_induction3_tips": "למד כיצד לחבר את כלי הבישול החכמים שלך ולעיין במגוון רחב של מתכונים שלב אחר שלב, שנעשו במיוחד עבור בישול מדויק בטמפרטורה.",
     "hob_induction4": "קבל השראה וקבע את ההעדפות שלך (4/4)",
-    "hob_induction4_tips": "גלה, מדריך דיגיטלי ושמור על המכשיר שלך מעודכן עם עדכוני הקושחה האחרונים.",
+    "hob_induction4_tips": "חקור את כל הפונקציות, מצא את המדריך הדיגיטלי ושמור את המכשיר שלך מעודכן עם עדכוני הקושחה האחרונים.",
     "get_started": "התחל בעבודה",
     "hob_get_started_tips": "גלה מה אתה יכול לעשות עם הכיריים שלך. נראה לך איך זה עובד.",
     "refresh_program_list": "רענן את רשימת התוכניות",
@@ -4146,5 +4146,8 @@
     "CL_DV_OV_24_brightness_setting_content": "ניתן לשנות את הבהירות של תצוגת התנור והמקשים לפי העדפתך. ",
     "CL_DV_OV_24_close_user_detected": "זוהה משתמש קרוב",
     "CL_CF_AS_firmware_update_upgrading": "מעדכן...",
-    "CL_DV_HOB_refresh_mode": "מצב רענון"
+    "CL_DV_HOB_refresh_mode": "מצב רענון",
+    "hob_induction3_new_tips": "למד כיצד לחבר את כלי הבישול החכמים שלך ולעיין במגוון רחב של מתכונים שלב אחר שלב, שנעשו במיוחד עבור בישול מדויק בטמפרטורה.",
+    "CL_DV_OV_added_successfully": "נוסף בהצלחה!",
+    "add_routine": "הוסף שגרה"
 }
