--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "Дұрыс температурада пісіріңіз (2/4)",
     "hob_induction2_tips": "Тамаша тағамды дайындау үшін қажетті барлық температураны табыңыз",
     "hob_induction3": "Барлық рецепттерді қосыңыз және табыңыз (3/4)",
-    "hob_induction3_tips": "Смарт ыдысты қалай қосу керектігін үйреніңіз және температура үшін арнайы жасалған қадамдық рецепттердің кең ауқымын шолыңыз.",
+    "hob_induction3_tips": "Смарт ыдысты қалай қосу керектігін үйреніңіз және температурада дәл пісіруге арнайы жасалған қадамдық рецепттердің кең ауқымын шолыңыз.",
     "hob_induction4": "Шабыт алыңыз және қалауларыңызды орнатыңыз (4/4)",
-    "hob_induction4_tips": "Сандық нұсқаулықты табыңыз және құрылғыңызды соңғы микробағдарлама жаңартуларымен жаңартып отырыңыз.",
+    "hob_induction4_tips": "Барлық функцияларды зерттеңіз, сандық нұсқаулықты табыңыз және құрылғыңызды микробағдарламаның соңғы жаңартуларымен жаңартып отырыңыз.",
     "get_started": "Жұмысты бастаңыз",
     "hob_get_started_tips": "Плитамен не істеуге болатынын біліңіз. Біз сізге оның қалай жұмыс істейтінін көрсетеміз.",
     "refresh_program_list": "Бағдарламалар тізімін жаңарту",
@@ -4146,5 +4146,8 @@
     "CL_DV_OV_24_brightness_setting_content": "Тұмшапеш дисплейі мен пернелердің жарықтығын қалауыңыз бойынша өзгертуге болады. ",
     "CL_DV_OV_24_close_user_detected": "Жабылатын пайдаланушы анықталды",
     "CL_CF_AS_firmware_update_upgrading": "Жаңарту...",
-    "CL_DV_HOB_refresh_mode": "Жаңарту режимі"
+    "CL_DV_HOB_refresh_mode": "Жаңарту режимі",
+    "hob_induction3_new_tips": "Смарт ыдысты қалай қосу керектігін үйреніңіз және температурада дәл пісіру үшін арнайы жасалған қадамдық рецепттердің кең ауқымын шолыңыз.",
+    "CL_DV_OV_added_successfully": "Сәтті қосылды!",
+    "add_routine": "РУТИН ҚОСУ"
 }
