--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "Кувајте на одговарајућим температурама (2/4)",
     "hob_induction2_tips": "Пронађите све температуре потребне за припрему савршеног јела",
     "hob_induction3": "Повежите се и откријте све рецепте (3/4)",
-    "hob_induction3_tips": "Сазнајте како да повежете своје паметне кухињске уређаје и прегледајте широк избор рецепата са упутствима корак по корак, посебно припремљених за температуру",
+    "hob_induction3_tips": "Научите како да повежете своје паметно посуђе и прегледајте широк спектар рецепата корак по корак, посебно направљених за кување са прецизношћу температуре.",
     "hob_induction4": "Инспиришите се и поставите своја подешавања (4/4)",
-    "hob_induction4_tips": "Сазнајте више, погледајте дигитални приручник и одржавајте ваш уређај ажурним уз најновије фирмвер обнове.",
+    "hob_induction4_tips": "Истражите све функције, пронађите дигитални приручник и одржавајте свој уређај ажурним најновијим ажурирањима фирмвера.",
     "get_started": "Започните",
     "hob_get_started_tips": "Сазнајте шта можете да урадите са својом плочом за кување. Показаћемо вам како то функционише.",
     "refresh_program_list": "Освежите листу програма",
@@ -4146,5 +4146,8 @@
     "CL_DV_OV_24_brightness_setting_content": "Осветљеност екрана и тастера рерне може се променити по жељи. ",
     "CL_DV_OV_24_close_user_detected": "Откривено је затварање корисника",
     "CL_CF_AS_firmware_update_upgrading": "Ажурирање...",
-    "CL_DV_HOB_refresh_mode": "Режим освежавања"
+    "CL_DV_HOB_refresh_mode": "Режим освежавања",
+    "hob_induction3_new_tips": "Научите како да повежете своје паметно посуђе и прегледајте широк спектар рецепата корак по корак, посебно направљених за кување са прецизношћу температуре.",
+    "CL_DV_OV_added_successfully": "Успешно додато!",
+    "add_routine": "ДОДАЈ РУТИНУ"
 }
