--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "Готуйте з правильною температурою (2/4)",
     "hob_induction2_tips": "Знайдіть усі температури, необхідні для приготування ідеальної страви",
     "hob_induction3": "Підключіться та знайдіть усі рецепти (3/4)",
-    "hob_induction3_tips": "Дізнайтеся, як підключити розумний посуд, і перегляньте широкий спектр покрокових рецептів, розроблених спеціально для температури",
+    "hob_induction3_tips": "Дізнайтеся, як підключити розумний посуд, і перегляньте широкий спектр покрокових рецептів, спеціально створених для приготування з точною температурою.",
     "hob_induction4": "Надихайтеся та встановлюйте свої вподобання (4/4)",
-    "hob_induction4_tips": "Дізнайтеся, цифровий посібник і оновлюйте свій пристрій за допомогою останніх оновлень мікропрограми.",
+    "hob_induction4_tips": "Ознайомтеся з усіма функціями, знайдіть цифровий посібник і постійно оновлюйте свій пристрій за допомогою останніх оновлень прошивки.",
     "get_started": "Починайте",
     "hob_get_started_tips": "Дізнайтеся, що можна зробити з варильною поверхнею. Ми покажемо вам, як це працює.",
     "refresh_program_list": "Оновити список програм",
@@ -4146,5 +4146,8 @@
     "CL_DV_OV_24_brightness_setting_content": "Яскравість дисплея та кнопок духовки можна змінити на свій смак. ",
     "CL_DV_OV_24_close_user_detected": "Закрити користувача виявлено",
     "CL_CF_AS_firmware_update_upgrading": "Оновлення...",
-    "CL_DV_HOB_refresh_mode": "Режим оновлення"
+    "CL_DV_HOB_refresh_mode": "Режим оновлення",
+    "hob_induction3_new_tips": "Дізнайтеся, як підключити розумний посуд, і перегляньте широкий спектр покрокових рецептів, спеціально створених для приготування з точною температурою.",
+    "CL_DV_OV_added_successfully": "",
+    "add_routine": "ДОДАТИ РУТИНУ"
 }
