--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "Гответе с правилните температури (2/4)",
     "hob_induction2_tips": "Намерете всички температури, от които се нуждаете, за да приготвите перфектното ястие",
     "hob_induction3": "Свържете се и открийте всички рецепти (3/4)",
-    "hob_induction3_tips": "Научете как да свържете вашия интелигентен съд за готвене и прегледайте широка гама от рецепти стъпка по стъпка, специално произведени за температура",
+    "hob_induction3_tips": "Научете как да свържете вашия интелигентен съд за готвене и прегледайте широка гама от рецепти стъпка по стъпка, специално създадени за готвене с прецизна температура.",
     "hob_induction4": "Вдъхновете се и задайте предпочитанията си (4/4)",
-    "hob_induction4_tips": "Разберете, цифрово ръководство и поддържайте уреда си актуален с най-новите актуализации на фърмуера.",
+    "hob_induction4_tips": "Разгледайте всички функции, намерете дигиталното ръководство и поддържайте уреда си актуален с най-новите актуализации на фърмуера.",
     "get_started": "Първи стъпки",
     "hob_get_started_tips": "Разберете какво можете да правите с плота си. Ще ви покажем как работи.",
     "refresh_program_list": "Обновяване на списъка с програми",
@@ -4146,5 +4146,8 @@
     "CL_DV_OV_24_brightness_setting_content": "Яркостта на дисплея и бутоните на фурната могат да се променят според вашите предпочитания. ",
     "CL_DV_OV_24_close_user_detected": "Затворен потребител е открит",
     "CL_CF_AS_firmware_update_upgrading": "Актуализиране...",
-    "CL_DV_HOB_refresh_mode": "Режим на опресняване"
+    "CL_DV_HOB_refresh_mode": "Режим на опресняване",
+    "hob_induction3_new_tips": "Научете как да свържете вашия интелигентен съд за готвене и прегледайте широка гама от рецепти стъпка по стъпка, специално създадени за готвене с прецизна температура.",
+    "CL_DV_OV_added_successfully": "Добавено успешно!",
+    "add_routine": "ДОБАВЯНЕ НА РУТИНА"
 }
