--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -2661,9 +2661,9 @@
     "hob_induction2": "Nấu ở nhiệt độ phù hợp (2/4)",
     "hob_induction2_tips": "Tìm tất cả nhiệt độ bạn cần để chuẩn bị món ăn hoàn hảo",
     "hob_induction3": "Kết nối và khám phá mọi công thức nấu ăn (3/4)",
-    "hob_induction3_tips": "Tìm hiểu cách kết nối dụng cụ nấu ăn thông minh của bạn và duyệt qua nhiều công thức nấu ăn từng bước, được sản xuất riêng cho nhiệt độ",
+    "hob_induction3_tips": "Tìm hiểu cách kết nối dụng cụ nấu ăn thông minh của bạn và duyệt qua nhiều công thức nấu ăn từng bước, được thiết kế riêng cho việc nấu ăn ở nhiệt độ chính xác.",
     "hob_induction4": "Lấy cảm hứng và thiết lập sở thích của bạn (4/4)",
-    "hob_induction4_tips": "Tìm hiểu, hướng dẫn kỹ thuật số và cập nhật thiết bị của bạn với các bản cập nhật chương trình cơ sở mới nhất.",
+    "hob_induction4_tips": "Khám phá tất cả các chức năng, tìm hướng dẫn sử dụng kỹ thuật số và cập nhật phần mềm mới nhất cho thiết bị của bạn.",
     "get_started": "Bắt đầu",
     "hob_get_started_tips": "Tìm hiểu những gì bạn có thể làm với bếp của bạn. Chúng tôi sẽ chỉ cho bạn cách hoạt động.",
     "refresh_program_list": "Làm mới danh sách chương trình",
@@ -4146,5 +4146,8 @@
     "CL_DV_OV_24_brightness_setting_content": "Độ sáng của màn hình hiển thị và các phím bấm của lò nướng có thể thay đổi tùy theo sở thích của bạn. ",
     "CL_DV_OV_24_close_user_detected": "Đóng người dùng phát hiện",
     "CL_CF_AS_firmware_update_upgrading": "Đang cập nhật ...",
-    "CL_DV_HOB_refresh_mode": "Chế độ làm mới"
+    "CL_DV_HOB_refresh_mode": "Chế độ làm mới",
+    "hob_induction3_new_tips": "Tìm hiểu cách kết nối dụng cụ nấu ăn thông minh của bạn và duyệt qua nhiều công thức nấu ăn từng bước, được thiết kế riêng cho việc nấu ăn ở nhiệt độ chính xác.",
+    "CL_DV_OV_added_successfully": "Đã thêm thành công!",
+    "add_routine": "THÊM THÓI QUEN"
 }
